dav: Fix DAV implementation stripping spaces

This patch fixes DAV stripping leading and trailing spaces from server
responses. This fixes access to DAV files and directories which names start or
end with a space.

https://bugzilla.gnome.org/show_bug.cgi?id=785123